# ffxiv-cutscene-skip

./: CMakeLists.txt  LICENSE  README.md  csskip.cpp  csskip.manifest  csskip.rc
